--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
     <video id="video" autoplay playsinline></video>
     <button id="snap">Tirar Foto</button>
     <canvas id="canvas"></canvas>
-    <img id="frame" src="moldura.png" style="display:none;">
     <button id="save">Salvar no Google Drive</button>
+    <div id="message" style="color: red; display: none;"></div>
 
+    <script src="https://apis.google.com/js/api.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
