--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <div id="message"></div>
 
     <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://accounts.google.com/gsi/client"></script>
     <script src="script.js"></script>
 </body>
 </html>
