--- a/index.html
+++ b/index.html
@@ -57,26 +57,26 @@
 
     <!-- Adicione os SDKs do Firebase -->
     <script type="module">
-      // Import the functions you need from the SDKs you need
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-      import { getStorage, ref, uploadBytesResumable, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+        import { getStorage, ref, uploadBytesResumable, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
 
-      // Your web app's Firebase configuration
-      const firebaseConfig = {
-        apiKey: "AIzaSyBJQ-AurpB2bRDnxo0uQtCnFPlZh3kGu5k",
-        authDomain: "teste-a3169.firebaseapp.com",
-        projectId: "teste-a3169",
-        storageBucket: "teste-a3169.appspot.com",
-        messagingSenderId: "564753177105",
-        appId: "1:564753177105:web:73b544a377d5b76d63afb0"
-      };
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyDV447G0fPHuVoITWjXMJ-_uoZJ8LhA994",
+            authDomain: "testedoteste-d5361.firebaseapp.com",
+            projectId: "testedoteste-d5361",
+            storageBucket: "testedoteste-d5361.appspot.com",
+            messagingSenderId: "199930490793",
+            appId: "1:199930490793:web:c79d02d9ddd2635e2e9eb8"
+        };
 
-      // Initialize Firebase
-      const app = initializeApp(firebaseConfig);
-      const storage = getStorage(app);
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const storage = getStorage(app);
 
-      // Export the storage to use it in script.js
-      export { storage, ref, uploadBytesResumable, getDownloadURL };
+        // Export the storage to use it in script.js
+        export { storage, ref, uploadBytesResumable, getDownloadURL };
     </script>
 
     <script type="module" src="script.js"></script>
