--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
     <div id="message"></div>
     <div id="gallery"></div>
 
-    <!-- Adicione os SDKs do Firebase -->
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
@@ -104,7 +103,7 @@
 
         // Carregar a moldura
         const frame = new Image();
-        frame.src = '/mnt/data/—Pngtree—flat polaroid frame_6486826 1.png';
+        frame.src = 'frame.png';
         frame.onload = () => {
             console.log("Moldura carregada com sucesso");
         };
