--- a/index.html
+++ b/index.html
@@ -20,10 +20,22 @@
             margin-top: 20px;
         }
 
+        #container {
+            position: relative;
+            width: 100%;
+            max-width: 1080px;
+        }
+
         video, canvas {
             width: 100%;
             max-width: 1080px;
             height: auto;
+        }
+
+        canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
         }
 
         #snap, #save, #view-gallery {
@@ -56,7 +68,10 @@
 </head>
 <body>
     <h1>Tire sua Selfie com Moldura</h1>
-    <video id="video" width="1080" height="1080" autoplay playsinline></video>
+    <div id="container">
+        <video id="video" width="1080" height="1080" autoplay playsinline></video>
+        <canvas id="frame-canvas" width="1080" height="1080"></canvas>
+    </div>
     <button id="snap">Tirar Foto</button>
     <canvas id="canvas" width="1080" height="1080" style="display:none;"></canvas>
     <button id="save">Salvar no Firebase</button>
@@ -64,120 +79,6 @@
     <div id="message"></div>
     <div id="gallery"></div>
 
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-        import { getStorage, ref, uploadBytesResumable, getDownloadURL, listAll } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
-
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyDV447G0fPHuVoITWjXMJ-_uoZJ8LhA994",
-            authDomain: "testedoteste-d5361.firebaseapp.com",
-            projectId: "testedoteste-d5361",
-            storageBucket: "testedoteste-d5361.appspot.com",
-            messagingSenderId: "199930490793",
-            appId: "1:199930490793:web:c79d02d9ddd2635e2e9eb8"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const storage = getStorage(app);
-
-        // Função para exibir mensagens
-        function showMessage(message) {
-            const messageDiv = document.getElementById('message');
-            messageDiv.style.display = 'block';
-            messageDiv.innerHTML = message;
-        }
-
-        // Configurar a câmera
-        const video = document.getElementById('video');
-        navigator.mediaDevices.getUserMedia({ video: { width: 1080, height: 1080 } })
-            .then(stream => {
-                video.srcObject = stream;
-            })
-            .catch(err => {
-                console.error("Erro ao acessar a câmera: " + err);
-                showMessage("Erro ao acessar a câmera: " + err.message);
-            });
-
-        // Carregar a moldura
-        const frame = new Image();
-        frame.src = 'frame.png';
-        frame.onload = () => {
-            console.log("Moldura carregada com sucesso");
-        };
-        
-        // Tirar a foto e aplicar a moldura
-        const canvas = document.getElementById('canvas');
-        const context = canvas.getContext('2d');
-
-        document.getElementById('snap').addEventListener('click', () => {
-            context.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-            // Adicionar a moldura
-            context.drawImage(frame, 0, 0, canvas.width, canvas.height);
-
-            // Adicionar legenda
-            context.font = '30px Arial';
-            context.fillStyle = 'white';
-            context.fillText('XV MaFer', 10, canvas.height - 20);
-            canvas.style.display = 'block';
-        });
-
-        // Salvar no Firebase Storage
-        document.getElementById('save').addEventListener('click', () => {
-            canvas.toBlob(blob => {
-                const storageRef = ref(storage, `selfies/${Date.now()}_selfie_com_moldura.png`);
-                const uploadTask = uploadBytesResumable(storageRef, blob);
-
-                uploadTask.on('state_changed', 
-                    (snapshot) => {
-                        // Progresso da upload
-                        const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-                        console.log(`Upload is ${progress}% done`);
-                    },
-                    (error) => {
-                        showMessage(`Erro ao salvar o arquivo: ${error.message}`);
-                    },
-                    () => {
-                        getDownloadURL(uploadTask.snapshot.ref).then((downloadURL) => {
-                            showMessage(`Arquivo salvo com sucesso! URL: <a href="${downloadURL}" target="_blank">${downloadURL}</a>`);
-                        }).catch(err => {
-                            showMessage(`Erro ao obter o URL de download: ${err.message}`);
-                        });
-                    }
-                );
-            }, 'image/png');
-        });
-
-        // Ver Galeria
-        document.getElementById('view-gallery').addEventListener('click', () => {
-            const galleryRef = ref(storage, 'selfies/');
-            console.log('Tentando listar imagens na pasta selfies/');
-            listAll(galleryRef)
-                .then(res => {
-                    console.log('Imagens listadas:', res);
-                    const galleryDiv = document.getElementById('gallery');
-                    galleryDiv.innerHTML = ''; // Limpar galeria
-                    res.items.forEach(itemRef => {
-                        getDownloadURL(itemRef).then(url => {
-                            const img = document.createElement('img');
-                            img.src = url;
-                            img.className = 'gallery-image';
-                            img.width = 150;
-                            galleryDiv.appendChild(img);
-                        }).catch(err => {
-                            console.error('Erro ao obter o URL de download:', err);
-                            showMessage(`Erro ao obter o URL de download: ${err.message}`);
-                        });
-                    });
-                })
-                .catch(err => {
-                    console.error('Erro ao listar imagens:', err);
-                    showMessage(`Erro ao listar imagens: ${err.message}`);
-                });
-        });
-    </script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
