--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             position: relative;
             width: 100%;
             max-width: 1080px;
+            height: 1080px;
         }
 
         video, canvas {
