--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            height: 100vh;
+            background: url('background.jpg') no-repeat center center fixed; /* URL da sua imagem de fundo */
+            background-size: cover;
         }
 
         h1 {
             text-align: center;
             margin-top: 20px;
+            color: white;
         }
 
         #container {
             position: relative;
             width: 100%;
             max-width: 1080px;
+            height: 1080px;
         }
 
         video, canvas {
