--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: url('background.jpg') no-repeat center center fixed; /* URL da sua imagem de fundo */
+            background: url('background') no-repeat center center fixed; /* URL da sua imagem de fundo */
             background-size: cover;
         }
 
