--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
             position: relative;
         }
 
+        button:before, button:after {
+            content: '';
+            position: absolute;
+            border: 2px solid pink;
+            width: calc(100% - 8px);
+            height: calc(100% - 8px);
+        }
+
+        button:before {
+            top: 4px;
+            left: 4px;
+        }
+
+        button:after {
+            top: -4px;
+            left: -4px;
+        }
+
         button:hover {
             background-color: #f8f8f8;
         }
