--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
             background-size: cover;
         }
 
-        h1 {
-            text-align: center;
-            margin-top: 20px;
-            color: white;
-        }
-
         #container {
             position: relative;
             width: 100%;
@@ -53,16 +47,27 @@
         button {
             padding: 20px;
             font-size: 1rem;
-            border: 2px solid pink;
-            background-color: white;
-            color: black;
+            border: 2px solid white;
+            background-color: transparent;
+            color: white;
             cursor: pointer;
-            border-radius: 5px;
-            position: relative;
+            border-radius: 50%; /* Circular shape */
+            width: 60px;
+            height: 60px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         button:hover {
             background-color: #f8f8f8;
+            color: black;
+        }
+
+        #snap::before {
+            content: "\f030"; /* Unicode for camera icon */
+            font-family: "Font Awesome 5 Free"; /* Ensure you load Font Awesome */
+            font-weight: 900;
         }
 
         #message {
@@ -84,13 +89,12 @@
         <canvas id="frame-canvas"></canvas>
     </div>
     <div id="buttons">
-        <button id="snap">Tirar Foto</button>
+        <button id="snap"></button>
         <button id="save">Salvar no Firebase</button>
-        <button id="view-gallery">Ver Galeria</button>
     </div>
     <canvas id="canvas" style="display:none;"></canvas>
     <div id="message"></div>
-    <div id="gallery"></div>
+    <div id="gallery" style="display:none;"></div> <!-- Hidden as no gallery view is required -->
 
     <script type="module" src="script.js"></script>
 </body>
