--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: url('background') no-repeat center center fixed;
+            background: url('background') no-repeat center center fixed; /* URL da sua imagem de fundo */
             background-size: cover;
         }
 
         #container {
             position: relative;
-            width: 90%;
-            max-width: 600px;
-            height: 600px;
-            margin-top: 20px;
-            overflow: hidden;
+            width: 90%; /* Adjusted to keep the aspect ratio more square */
+            max-width: 600px; /* Limits the width to make the frame more square */
+            height: 600px; /* Same height and width to make it square */
+            margin-top: 20px; /* Added space above the container */
+            overflow: hidden; /* Ensures nothing extends beyond the container */
         }
 
         video, canvas {
@@ -32,19 +32,18 @@
             height: 100%;
         }
 
-        #preview {
+        canvas {
             position: absolute;
             top: 0;
             left: 0;
-            display: none; /* Initially hidden */
         }
 
         #buttons {
             display: flex;
             justify-content: space-around;
-            width: 90%;
-            max-width: 600px;
-            margin-top: 10px;
+            width: 90%; /* Matching the width of the container */
+            max-width: 600px; /* Ensures buttons align with the container above */
+            margin-top: 10px; /* Space between the container and buttons */
         }
 
         button {
@@ -54,7 +53,7 @@
             background-color: white;
             color: black;
             cursor: pointer;
-            border-radius: 50%;
+            border-radius: 50%; /* Circular shape */
             width: 60px;
             height: 60px;
             display: flex;
@@ -66,9 +65,19 @@
             background-color: #f8f8f8;
         }
 
+        #snap::before {
+            content: "\f030"; /* Unicode for camera icon */
+            font-family: "Font Awesome 5 Free"; /* Ensure you load Font Awesome */
+            font-weight: 900;
+        }
+
         #message {
             color: red;
             display: none;
+        }
+
+        .gallery-image {
+            display: none; /* Gallery images not shown as per user request */
         }
     </style>
 </head>
@@ -76,13 +85,14 @@
     <div id="container">
         <video id="video" autoplay playsinline></video>
         <canvas id="frame-canvas"></canvas>
-        <canvas id="preview"></canvas> <!-- Added for displaying the captured image -->
     </div>
     <div id="buttons">
-        <button id="snap">Tirar Foto</button>
+        <button id="snap"></button>
         <button id="save">Salvar</button>
     </div>
+    <canvas id="canvas" style="display:none;"></canvas>
     <div id="message"></div>
+    <div id="gallery" style="display:none;"></div>
 
     <script type="module" src="script.js"></script>
 </body>
