--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: url('background') no-repeat center center fixed; /* URL da sua imagem de fundo */
+            background: url('background') no-repeat center center fixed;
             background-size: cover;
         }
 
         #container {
             position: relative;
-            width: 90%; /* Adjusted to keep the aspect ratio more square */
-            max-width: 600px; /* Limits the width to make the frame more square */
-            height: 600px; /* Same height and width to make it square */
-            margin-top: 20px; /* Added space above the container */
-            overflow: hidden; /* Ensures nothing extends beyond the container */
+            width: 90%;
+            max-width: 600px;
+            height: 600px;
+            margin-top: 20px;
+            overflow: hidden;
         }
 
         video, canvas {
@@ -41,9 +41,9 @@
         #buttons {
             display: flex;
             justify-content: space-around;
-            width: 90%; /* Matching the width of the container */
-            max-width: 600px; /* Ensures buttons align with the container above */
-            margin-top: 10px; /* Space between the container and buttons */
+            width: 90%;
+            max-width: 600px;
+            margin-top: 10px;
         }
 
         button {
@@ -53,7 +53,7 @@
             background-color: white;
             color: black;
             cursor: pointer;
-            border-radius: 50%; /* Circular shape */
+            border-radius: 50%;
             width: 60px;
             height: 60px;
             display: flex;
@@ -66,8 +66,8 @@
         }
 
         #snap::before {
-            content: "\f030"; /* Unicode for camera icon */
-            font-family: "Font Awesome 5 Free"; /* Ensure you load Font Awesome */
+            content: "\f030";
+            font-family: "Font Awesome 5 Free";
             font-weight: 900;
         }
 
@@ -77,7 +77,7 @@
         }
 
         .gallery-image {
-            display: none; /* Gallery images not shown as per user request */
+            display: none;
         }
     </style>
 </head>
@@ -85,12 +85,13 @@
     <div id="container">
         <video id="video" autoplay playsinline></video>
         <canvas id="frame-canvas"></canvas>
+        <canvas id="capture-canvas" style="display: none;"></canvas>
     </div>
     <div id="buttons">
         <button id="snap"></button>
         <button id="save">Salvar</button>
+        <button id="back" style="display: none;">Voltar</button>
     </div>
-    <canvas id="canvas" style="display:none;"></canvas>
     <div id="message"></div>
     <div id="gallery" style="display:none;"></div>
 
