cor do fundo modificado

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: url('background') no-repeat center center fixed;
-            background-size: cover;
+            background-color: #FFF8FF; /* Cor de fundo alterada */
         }
 
         #container {
