--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-color: #FFF8FF; /* Cor de fundo alterada */
+            background-color: #FFF8FF; /* Cor de fundo */
+            position: relative;
+        }
+
+        #background {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('background.png') no-repeat center center;
+            background-size: cover;
+            opacity: 0.5; /* Opacidade de 50% */
+            z-index: -1; /* Coloca o background atrás de outros elementos */
         }
 
         #container {
@@ -81,6 +94,7 @@
     </style>
 </head>
 <body>
+    <div id="background"></div>
     <div id="container">
         <video id="video" autoplay playsinline></video>
         <canvas id="frame-canvas"></canvas>
