--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             background-color: #f8f8f8;
         }
 
-        #snap .fa-camera {
+        #snap .fa-camera,
+        #save .fa-save {
             font-size: 24px;
         }
 
@@ -101,7 +102,7 @@
     </div>
     <div id="buttons">
         <button id="snap"><i class="fas fa-camera"></i></button>
-        <button id="save">Salvar</button>
+        <button id="save"><i class="fas fa-save"></i></button>
         <button id="back" style="display: none;">Voltar</button>
     </div>
     <div id="message"></div>
