--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         }
 
         #snap .fa-camera,
-        #save .fa-save {
+        #save .fa-save,
+        #back .fa-arrow-left {
             font-size: 24px;
         }
 
@@ -103,7 +104,7 @@
     <div id="buttons">
         <button id="snap"><i class="fas fa-camera"></i></button>
         <button id="save"><i class="fas fa-save"></i></button>
-        <button id="back" style="display: none;">Voltar</button>
+        <button id="back" style="display: none;"><i class="fas fa-arrow-left"></i></button>
     </div>
     <div id="message"></div>
     <div id="gallery" style="display:none;"></div>
