--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         video, canvas {
             width: 100%;
             height: 100%;
+            transform: scaleX(-1); /* Girar a câmera horizontalmente */
         }
 
         canvas {
