--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             overflow: hidden;
         }
 
-        video, canvas {
+        video {
             width: 100%;
             height: 100%;
             transform: scaleX(-1); /* Girar a câmera horizontalmente */
@@ -50,6 +50,8 @@
             position: absolute;
             top: 0;
             left: 0;
+            width: 100%;
+            height: 100%;
         }
 
         #buttons {
