correção da camera

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
         video {
             width: 100%;
             height: 100%;
-            transform: scaleX(-1); /* Girar a câmera horizontalmente */
+            transform: scaleX(-1); /* Espelhamento horizontal */
         }
 
         canvas {
+            width: 100%;
+            height: 100%;
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
         }
 
         #buttons {
