--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selfie com Moldura</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -83,7 +84,8 @@
 
         #snap .fa-camera,
         #save .fa-save,
-        #back .fa-arrow-left {
+        #back .fa-arrow-left,
+        #gif .fa-film {
             font-size: 24px;
         }
 
@@ -107,6 +109,7 @@
     <div id="buttons">
         <button id="snap"><i class="fas fa-camera"></i></button>
         <button id="save"><i class="fas fa-save"></i></button>
+        <button id="gif"><i class="fas fa-film"></i></button>
         <button id="back" style="display: none;"><i class="fas fa-arrow-left"></i></button>
     </div>
     <div id="message"></div>
