--- a/index.html
+++ b/index.html
@@ -90,6 +90,25 @@
         #message {
             color: green;
             display: none;
+            text-align: center;
+        }
+
+        #message button {
+            margin-top: 10px;
+            padding: 10px 15px;
+            font-size: 1rem;
+            border: none;
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
+            border-radius: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #message button i {
+            margin-right: 5px;
         }
 
         .gallery-image {
