--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 
         #snap .fa-camera,
         #save .fa-save,
-        #back .fa-arrow-left {
+        #back .fa-arrow-left,
+        #visualize .fa-eye {
             font-size: 24px;
         }
 
@@ -91,24 +92,6 @@
             color: green;
             display: none;
             text-align: center;
-        }
-
-        #message button {
-            margin-top: 10px;
-            padding: 10px 15px;
-            font-size: 1rem;
-            border: none;
-            background-color: #4CAF50;
-            color: white;
-            cursor: pointer;
-            border-radius: 5px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        #message button i {
-            margin-right: 5px;
         }
 
         #progress {
