--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
         #buttons {
             display: flex;
-            justify-content: space-around;
+            flex-direction: column;
+            align-items: center;
             width: 90%;
             max-width: 600px;
             margin-top: 10px;
@@ -75,6 +76,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-top: 10px;
         }
 
         button:hover {
@@ -124,6 +126,7 @@
     <div id="buttons">
         <button id="snap"><i class="fas fa-camera"></i></button>
         <button id="save"><i class="fas fa-save"></i></button>
+        <button id="visualize" style="display: none;"><i class="fas fa-eye"></i></button>
         <button id="back" style="display: none;"><i class="fas fa-arrow-left"></i></button>
     </div>
     <div id="message"></div>
