--- a/index.html
+++ b/index.html
@@ -56,10 +56,16 @@
 
         #buttons {
             display: flex;
-            flex-direction: column;
-            align-items: center;
+            justify-content: space-around;
             width: 90%;
             max-width: 600px;
+            margin-top: 10px;
+        }
+
+        #visualize-container {
+            display: flex;
+            justify-content: center;
+            width: 100%;
             margin-top: 10px;
         }
 
@@ -76,7 +82,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 10px;
         }
 
         button:hover {
@@ -126,8 +131,10 @@
     <div id="buttons">
         <button id="snap"><i class="fas fa-camera"></i></button>
         <button id="save"><i class="fas fa-save"></i></button>
-        <button id="visualize" style="display: none;"><i class="fas fa-eye"></i></button>
         <button id="back" style="display: none;"><i class="fas fa-arrow-left"></i></button>
+    </div>
+    <div id="visualize-container">
+        <button id="visualize" style="display: none;"><i class="fas fa-eye"></i></button>
     </div>
     <div id="message"></div>
     <div id="progress">
